add tests-kubernetes image build outside of tests image

--- a/ci-operator/config/openshift/origin/openshift-origin-master.yaml
+++ b/ci-operator/config/openshift/origin/openshift-origin-master.yaml
@@ -40,6 +40,14 @@ images:
       - registry.svc.ci.openshift.org/ocp/builder:golang-1.12
       paths: null
   to: hyperkube
+- dockerfile_path: images/tests-kubernetes/Dockerfile.rhel
+  from: cli
+  inputs:
+    bin:
+      as:
+      - registry.svc.ci.openshift.org/ocp/builder:golang-1.12
+      paths: null
+  to: tests-kubernetes
 - dockerfile_path: images/tests/Dockerfile.rhel
   from: cli
   inputs:
