Add the user to /etc/passwd so the Ansible user lookup succeeds

--- a/ci-operator/config/openshift/template-service-broker-operator/openshift-template-service-broker-operator-master.yaml
+++ b/ci-operator/config/openshift/template-service-broker-operator/openshift-template-service-broker-operator-master.yaml
@@ -27,7 +27,9 @@ tag_specification:
 test_binary_build_commands: make openshift-ci-test-container
 tests:
 - as: lint
-  commands: make openshift-ci-operator-lint
+  commands: |
+    echo "${USER:-default}:x:$(id -u):$(id -g):Default User:${HOME:-/tmp}:/sbin/nologin" >> /etc/passwd
+    make openshift-ci-operator-lint
   container:
     from: test-bin
 - as: operator-molecule-e2e
