--- a/ci-operator/config/openshift/odo/openshift-odo-master__v4.1.yaml
+++ b/ci-operator/config/openshift/odo/openshift-odo-master__v4.1.yaml
@@ -6,8 +6,8 @@ resources:
   '*':
     limits: null
     requests:
-      cpu: "4"
-      memory: 8Gi
+      cpu: "200m"
+      memory: 6Gi
 tag_specification:
   cluster: https://api.ci.openshift.org
   name: "4.1"
