Populate CM secret-mirroring to build01

--- a/core-services/prow/02_config/_plugins.yaml
+++ b/core-services/prow/02_config/_plugins.yaml
@@ -984,8 +984,10 @@ config_updater:
       name: base-repos
     core-services/secret-mirroring/_mapping.yaml:
       clusters:
+        ci/api-build01-ci-devcluster-openshift-com:6443:
+        - ci
         default:
-        - ""
+        - ci
       key: mapping.yaml
       name: secret-mirroring
     core-services/sshd-bastion/ppc64le/sshd_config:
