Moving the override repo to the new multi-arch repo
We've moved the image overrides to a new repository with manifests lists so that we can support it for non-s390x arches in the future.

--- a/ci-operator/templates/openshift/installer/cluster-launch-installer-remote-libvirt-e2e.yaml
+++ b/ci-operator/templates/openshift/installer/cluster-launch-installer-remote-libvirt-e2e.yaml
@@ -229,7 +229,7 @@ objects:
 
         # use s390x builds of e2e test images
         cat << EOREGISTRY > /tmp/kube-test-repo-list
-        e2eRegistry: quay.io/k8s-e2e-s390x
+        e2eRegistry: quay.io/multiarch-k8s-e2e
         EOREGISTRY
         export KUBE_TEST_REPO_LIST=/tmp/kube-test-repo-list
 
