template: Use line-buffered grep so we get incremental output
We tried to look at time for install and realized that the password
exclusion change broke timestamps for the parts of an install. Use
--line-buffered to get continuous log output.

--- a/ci-operator/templates/openshift/endurance/endurance-install.yaml
+++ b/ci-operator/templates/openshift/endurance/endurance-install.yaml
@@ -412,7 +412,7 @@ objects:
             exit 1
         fi
 
-        TF_LOG=debug openshift-install --dir=/tmp/artifacts/installer create cluster 2>&1 | grep -v password &
+        TF_LOG=debug openshift-install --dir=/tmp/artifacts/installer create cluster 2>&1 | grep --line-buffered -v password &
         wait "$!"
 
         echo "##################### start cluster metadata.json ##########################"
