--- a/ci-operator/templates/openshift/installer/cluster-launch-installer-ovirt-e2e.yaml
+++ b/ci-operator/templates/openshift/installer/cluster-launch-installer-ovirt-e2e.yaml
@@ -437,7 +437,7 @@ objects:
         export KUBECONFIG=/tmp/artifacts/installer/auth/kubeconfig
         update_image_registry &
 
-        TF_LOG=debug openshift-install --dir=/tmp/artifacts/installer create cluster --log-level=debug 2>&1 | grep -v password &
+        TF_LOG=debug openshift-install --dir=/tmp/artifacts/installer create cluster --log-level=debug 2>&1 | grep --line-buffered -v password &
         wait "$!"
         install_exit_status=$?
         sleep 10m
