--- a/ci-operator/jobs/openshift/osde2e/openshift-osde2e-master-periodics.yaml
+++ b/ci-operator/jobs/openshift/osde2e/openshift-osde2e-master-periodics.yaml
@@ -326,6 +326,96 @@ periodics:
       secret:
         secretName: osde2e-secrets
 - agent: kubernetes
+  cron: 0 */4 * * *
+  decorate: true
+  extra_refs:
+  - base_ref: master
+    org: openshift
+    repo: osde2e
+  labels:
+    pj-rehearse.openshift.io/can-be-rehearsed: "true"
+  name: periodic-ci-openshift-osde2e-master-e2e-int-4.3-4.4
+  spec:
+    containers:
+    - args:
+      - set -o pipefail; export HOME=$(mktemp -d); export REPORT_DIR=${ARTIFACTS};
+        ./ci/prow_run_tests.sh /usr/local/osde2e-secrets;
+      command:
+      - /bin/bash
+      - -c
+      env:
+      - name: DESTROY_CLUSTER
+        value: "false"
+      - name: GINKGO_SKIP
+        value: OpenShift E2E
+      - name: MAJOR_TARGET
+        value: "4"
+      - name: MINOR_TARGET
+        value: "3"
+      - name: OSD_ENV
+        value: int
+      - name: UPGRADE_RELEASE_STREAM
+        value: 4.4.0-0.nightly
+      image: registry.svc.ci.openshift.org/openshift/release:golang-1.13
+      imagePullPolicy: Always
+      name: ""
+      resources:
+        requests:
+          cpu: 10m
+      volumeMounts:
+      - mountPath: /usr/local/osde2e-secrets
+        name: osde2e-secrets
+        readOnly: true
+    serviceAccountName: ci-operator
+    volumes:
+    - name: osde2e-secrets
+      secret:
+        secretName: osde2e-secrets
+- agent: kubernetes
+  cron: 0 */4 * * *
+  decorate: true
+  extra_refs:
+  - base_ref: master
+    org: openshift
+    repo: osde2e
+  labels:
+    pj-rehearse.openshift.io/can-be-rehearsed: "true"
+  name: periodic-ci-openshift-osde2e-master-e2e-int-4.4
+  spec:
+    containers:
+    - args:
+      - set -o pipefail; export HOME=$(mktemp -d); export REPORT_DIR=${ARTIFACTS};
+        ./ci/prow_run_tests.sh /usr/local/osde2e-secrets;
+      command:
+      - /bin/bash
+      - -c
+      env:
+      - name: DESTROY_CLUSTER
+        value: "false"
+      - name: GINKGO_SKIP
+        value: OpenShift E2E
+      - name: MAJOR_TARGET
+        value: "4"
+      - name: MINOR_TARGET
+        value: "4"
+      - name: OSD_ENV
+        value: int
+      image: registry.svc.ci.openshift.org/openshift/release:golang-1.13
+      imagePullPolicy: Always
+      name: ""
+      resources:
+        requests:
+          cpu: 10m
+      volumeMounts:
+      - mountPath: /usr/local/osde2e-secrets
+        name: osde2e-secrets
+        readOnly: true
+    serviceAccountName: ci-operator
+    volumes:
+    - name: osde2e-secrets
+      secret:
+        secretName: osde2e-secrets
+- agent: kubernetes
   cron: 0 8 * * *
   decorate: true
   extra_refs:
