template: Upgrade jobs should allow IMAGE to be parameterized
Mirror changes already made in ci-operator. Also increase the
active deadline to allow for longer sequential upgrades to be
possible.

--- a/ci-operator/templates/openshift/endurance/endurance-test.yaml
+++ b/ci-operator/templates/openshift/endurance/endurance-test.yaml
@@ -56,7 +56,7 @@ objects:
       ci-operator.openshift.io/container-sub-tests: "initcreds,test"
   spec:
     restartPolicy: Never
-    activeDeadlineSeconds: 18000
+    activeDeadlineSeconds: 21600
     terminationGracePeriodSeconds: 900
     volumes:
     - name: artifacts
@@ -144,7 +144,7 @@ objects:
             return 0
           fi
 
-          openshift-tests run-upgrade "${TEST_SUITE}" --to-image "${RELEASE_IMAGE_LATEST}" \
+          openshift-tests run-upgrade "${TEST_SUITE}" --to-image "${IMAGE:-${RELEASE_IMAGE_LATEST}}" \
             --options "${TEST_OPTIONS:-}" \
             --provider "${TEST_PROVIDER:-}" -o /tmp/artifacts/e2e.log --junit-dir /tmp/artifacts/junit
         }
