--- a/ci-operator/templates/openshift/installer/cluster-launch-installer-ovirt-e2e.yaml
+++ b/ci-operator/templates/openshift/installer/cluster-launch-installer-ovirt-e2e.yaml
@@ -268,7 +268,7 @@ objects:
         cd /tmp/output
 
         function run-upgrade-tests() {
-          openshift-tests run-upgrade "${TEST_SUITE}" --to-image "${RELEASE_IMAGE_LATEST}" \
+          openshift-tests run-upgrade "${TEST_SUITE}" --to-image "${IMAGE:-${RELEASE_IMAGE_LATEST}}" \
             --options "${TEST_OPTIONS:-}" \
             --provider "${TEST_PROVIDER:-}" -o /tmp/artifacts/e2e.log --junit-dir /tmp/artifacts/junit
         }
