integrate Openshift-CI to network-metrics-daemon
This PR integrate the Openshift-CI system to the network-metrics-daemon,
this repo is under the openshift org.

Signed-off-by: Sebastian Sch <sebassch@gmail.com>

--- a/core-services/prow/02_config/_config.yaml
+++ b/core-services/prow/02_config/_config.yaml
@@ -444,6 +444,7 @@ tide:
     openshift/knative-eventing: squash
     openshift/knative-eventing-contrib: squash
     openshift/knative-serving: squash
+    openshift/network-metrics-daemon: squash
     openshift/odo: squash
     openshift/odo-init-image: squash
     openshift/sriov-tests: squash
@@ -890,6 +891,7 @@ tide:
     - openshift-priv/ci-experiment-origin
     - openshift/openshift-tests
     - openshift/csi-driver-nfs
+    - openshift/network-metrics-daemon
   - includedBranches:
     - release-3.11
     - feature-es6x
