--- a/core-services/prow/02_config/_plugins.yaml
+++ b/core-services/prow/02_config/_plugins.yaml
@@ -2425,6 +2425,8 @@ plugins:
   - approve
   openshift/must-gather:
   - approve
+  openshift/network-metrics-daemon:
+  - approve
   openshift/node-feature-discovery:
   - approve
   openshift/node-problem-detector:
