Adding openatck upi e2e.
the openstack upi are ientical to ip tests.
According to this comming:
https://github.com/openshift/release/commit/bbd38849

"The openstack e2e job needs some template changes that would break
the aws version of the job. Namely, we need to hardcode a DNS server
that we control, in order to allow the installer to resolve the api
URL.
"

Thus we introduce a new template. If the issues stated in the commit
mentioned are no longer valid. Perhaps the template should be merged
with the other plaform upi-e2e templates.

--- a/core-services/prow/02_config/_plugins.yaml
+++ b/core-services/prow/02_config/_plugins.yaml
@@ -723,6 +723,14 @@ config_updater:
         - ci
         - ci-stg
       name: prow-job-cluster-launch-installer-openstack-e2e
+    ci-operator/templates/openshift/installer/cluster-launch-installer-openstack-upi-e2e.yaml:
+      clusters:
+        ci/api-build01-ci-devcluster-openshift-com:6443:
+        - ci
+        default:
+        - ci
+        - ci-stg
+      name: prow-job-cluster-launch-installer-openstack-upi-e2e
     ci-operator/templates/openshift/installer/cluster-launch-installer-ovirt-e2e.yaml:
       clusters:
         ci/api-build01-ci-devcluster-openshift-com:6443:
