--- a/ci-operator/templates/openshift/installer/cluster-launch-installer-openstack-upi-e2e.yaml
+++ b/ci-operator/templates/openshift/installer/cluster-launch-installer-openstack-upi-e2e.yaml
@@ -208,18 +208,22 @@ objects:
         trap 'rc=$?; if test "${rc}" -eq 0; then touch /tmp/shared/setup-success; else touch /tmp/shared/exit /tmp/shared/setup-failed; fi; exit "${rc}"' EXIT
         trap 'CHILDREN=$(jobs -p); if test -n "${CHILDREN}"; then kill ${CHILDREN} && wait; fi' TERM
 
+        # We have to truncate cluster name to 14 chars, because there is a limitation in the install-config
+        # Now it looks like "ci-op-rl6z646h-65230".
+        # We will remove "ci-op-" prefix from there to keep just last 14 characters.
+        export CLUSTER_NAME=${CLUSTER_NAME:${#CLUSTER_NAME}<14?0:-14}
+
         GATHER_BOOTSTRAP_ARGS=
         function gather_bootstrap_and_fail() {
-        if test -n "${GATHER_BOOTSTRAP_ARGS}"; then
-        openshift-install --dir=/tmp/artifacts/installer gather bootstrap --key "${SSH_PRIVATE_KEY_PATH}" ${GATHER_BOOTSTRAP_ARGS}
-        fi
-        return 1
+          if test -n "${GATHER_BOOTSTRAP_ARGS}"; then
+            openshift-install --dir=/tmp/artifacts/installer gather bootstrap --key "${SSH_PRIVATE_KEY_PATH}" ${GATHER_BOOTSTRAP_ARGS}
+          fi
+          return 1
         }
 
         # copy active openshift-install binary to /tmp
         cp "$(command -v openshift-install)" /tmp
-
-        [ ! -d "/tmp/artifacts/installer" ] && mkdir "/tmp/artifacts/installer"
+        mkdir "/tmp/artifacts/installer"
 
         #Pick release image to use
         if [[ -n "${INSTALL_INITIAL_RELEASE}" && -n "${RELEASE_IMAGE_INITIAL}" ]]; then
@@ -233,6 +237,7 @@ objects:
         export EXPIRATION_DATE=$(date -d '4 hours' --iso=minutes --utc)
         export SSH_PUB_KEY=$(cat "${SSH_PUB_KEY_PATH}")
         export PULL_SECRET=$(cat "${PULL_SECRET_PATH}")
+
         # move private key to ~/.ssh/ so that installer can use it to gather logs on bootstrap failure
         mkdir -p ~/.ssh
         cp "${SSH_PRIVATE_KEY_PATH}" ~/.ssh/id_rsa
@@ -313,6 +318,7 @@ objects:
         openshift-install --dir=/tmp/artifacts/installer create ignition-configs &
         wait "$!"
 
+        # begin bootstrapping
         cp /tmp/artifacts/installer/bootstrap.ign /tmp/sif
         BOOTSTRAP_URI="https://${JOB_NAME_SAFE}-bootstrap-exporter-${NAMESPACE}.svc.ci.openshift.org/bootstrap.ign"
 
@@ -593,6 +599,24 @@ objects:
           touch /tmp/shared/exit
           export PATH=$PATH:/tmp/shared
 
+
+          # collect logs from the proxy
+          if [ -f "/tmp/artifacts/installer/proxyip" ]
+          then
+            proxy_ip="$(cat /tmp/artifacts/installer/proxyip)"
+            mkdir -p /tmp/artifacts/proxy
+
+            if ! whoami &> /dev/null; then
+              if [ -w /etc/passwd ]; then
+                echo "${USER_NAME:-default}:x:$(id -u):0:${USER_NAME:-default} user:${HOME}:/sbin/nologin" >> /etc/passwd
+              fi
+            fi
+            eval $(ssh-agent)
+            ssh-add /etc/openshift-installer/ssh-privatekey
+            ssh -A -o PreferredAuthentications=publickey -o StrictHostKeyChecking=false -o UserKnownHostsFile=/dev/null core@${proxy_ip} 'journalctl -u squid' > /tmp/artifacts/proxy/squid.service
+
+          fi
+
           echo "Gathering artifacts ..."
           mkdir -p /tmp/artifacts/pods /tmp/artifacts/nodes /tmp/artifacts/metrics /tmp/artifacts/bootstrap /tmp/artifacts/network
 
@@ -700,6 +724,7 @@ objects:
           wait
 
 
+          echo "Deprovisioning openstack cluster ..."
           if [ -z "$DO_NOT_CREATE_DNS_RECORD" ]; then
           echo "Removing entries from DNS ..."
           export HOSTED_ZONE_ID=$(aws route53 list-hosted-zones-by-name --dns-name "shiftstack.devcluster.openshift.com" | python -c 'import json,sys;print json.load(sys.stdin)["HostedZones"][0]["Id"].split("/")[-1]')
@@ -719,7 +744,6 @@ objects:
           echo "Deleting ingress FIP using UID: ${INGRESS_FIP_UID}"
           openstack floating ip delete $INGRESS_FIP_UID
 
-          echo "Deprovisioning cluster ..."
           #openshift-install --dir /tmp/artifacts/installer destroy cluster
 
           #run teardown playbooks for upi
@@ -754,5 +778,5 @@ objects:
           if [[ -f /tmp/shared/exit ]]; then
             exit 0
           fi
-          sleep 6 & wait
+          sleep 60 & wait
         done
