--- a/ci-operator/jobs/kubevirt/kubevirt/kubevirt-kubevirt-master-presubmits.yaml
+++ b/ci-operator/jobs/kubevirt/kubevirt/kubevirt-kubevirt-master-presubmits.yaml
@@ -110,7 +110,8 @@ presubmits:
             echo "checking pods for kubevirt"
             oc get pods -n kubevirt
             echo "testing"
-            FUNC_TEST_ARGS='--ginkgo.skip=Genie|SRIOV|GPU --junit-output=$(pwd)/exported-artifacts/junit.functest.xml' bash -x ./hack/functests.sh
+            TESTS_TO_FOCUS=$(grep -E -o '\[crit\:high\]' tests/*_test.go | sort | uniq | sed -E 's/tests\/([a-z_]+)\_test\.go\:.*/\1/' | tr '\n' '|')
+            FUNC_TEST_ARGS='--ginkgo.focus='"$TESTS_TO_FOCUS"' --ginkgo.regexScansFilePath=true --junit-output='"$(pwd)"'/exported-artifacts/junit.functest.xml' bash -x ./hack/functests.sh
         - name: TEST_IMAGESTREAM_TAG
           value: pipeline:kubevirt-test
         image: ci-operator:latest
