--- a/ci-operator/config/openshift/origin-aggregated-logging/openshift-origin-aggregated-logging-master.yaml
+++ b/ci-operator/config/openshift/origin-aggregated-logging/openshift-origin-aggregated-logging-master.yaml
@@ -74,15 +74,7 @@ tests:
   commands: /tmp/run.sh
   container:
     from: logging-test-unit
-- as: full-integ-aws
-  commands: |
-    . openshift/ci-operator/build-image/setup-logging-for-e2e.sh
-  openshift_installer_src:
-    cluster_profile: aws
-- as: upgrade-full-integ-aws
-  commands: |
-    OPENSHIFT_BUILD_NAMESPACE= IMAGE_FORMAT= USE_CUSTOM_IMAGES=true hack/deploy-logging.sh
-    export LOGGING_DEPLOY_MODE=upgrade
-    . openshift/ci-operator/build-image/setup-logging-for-e2e.sh
+- as: smoke
+  commands: make test
   openshift_installer_src:
     cluster_profile: aws
