--- a/core-services/prow/02_config/_plugins.yaml
+++ b/core-services/prow/02_config/_plugins.yaml
@@ -173,6 +173,13 @@ bugzilla:
       target_release: 4.3.z
       validate_by_default: true
     openshift-4.4:
+      dependent_bug_states:
+      - status: MODIFIED
+      - status: ON_QA
+      - status: VERIFIED
+      - status: RELEASE_PENDING
+      - resolution: ERRATA
+        status: CLOSED
       dependent_bug_target_release: 4.5.0
       target_release: 4.4.0
       validate_by_default: true
@@ -189,6 +196,13 @@ bugzilla:
       target_release: 4.3.z
       validate_by_default: true
     release-4.4:
+      dependent_bug_states:
+      - status: MODIFIED
+      - status: ON_QA
+      - status: VERIFIED
+      - status: RELEASE_PENDING
+      - resolution: ERRATA
+        status: CLOSED
       dependent_bug_target_release: 4.5.0
       target_release: 4.4.0
       validate_by_default: true
