Fix smoke tests execution (renamed to Early, no custom filter)

--- a/ci-operator/templates/openshift/installer/cluster-launch-installer-e2e.yaml
+++ b/ci-operator/templates/openshift/installer/cluster-launch-installer-e2e.yaml
@@ -349,7 +349,7 @@ objects:
 
         function run-remote-smoke-tests() {
           set +e
-          ssh $SSHOPTS root@$IP openshift-tests run "${TEST_SUITE}" --dry-run \| grep -Fvf dev-scripts/filtered-tests \| grep 'Smoke' \| openshift-tests run -o /tmp/artifacts/e2e.log --junit-dir /tmp/artifacts/junit -f -
+          ssh $SSHOPTS root@$IP openshift-tests run "${TEST_SUITE}" --dry-run \| grep 'Early' \| openshift-tests run -o /tmp/artifacts/e2e.log --junit-dir /tmp/artifacts/junit -f -
           rv=$?
           ssh $SSHOPTS root@$IP tar -czf - /tmp/artifacts | tar -C / -xzf - 
           set -e
