ci-operator/jobs/infra-periodics.yaml: manage stale issues

--- a/ci-operator/jobs/infra-periodics.yaml
+++ b/ci-operator/jobs/infra-periodics.yaml
@@ -169,6 +169,7 @@ periodics:
         repo:openshift/openshift-azure
         repo:openshift/release
         repo:openshift/odo
+        repo:openshift/installer
         -label:lifecycle/frozen
         label:lifecycle/rotten
       - --updated=720h
@@ -217,6 +218,7 @@ periodics:
         repo:openshift/openshift-azure
         repo:openshift/release
         repo:openshift/odo
+        repo:openshift/installer
         -label:lifecycle/frozen
         label:lifecycle/stale
         -label:lifecycle/rotten
@@ -269,6 +271,7 @@ periodics:
         repo:openshift/openshift-azure
         repo:openshift/release
         repo:openshift/odo
+        repo:openshift/installer
         -label:lifecycle/frozen
         -label:lifecycle/stale
         -label:lifecycle/rotten
