Allow tide to handle merges for backports to cluster-etcd-operator

--- a/core-services/prow/02_config/_config.yaml
+++ b/core-services/prow/02_config/_config.yaml
@@ -545,6 +545,7 @@ tide:
     - openshift/cluster-config-operator
     - openshift/cluster-csi-snapshot-controller-operator
     - openshift/cluster-dns-operator
+    - openshift/cluster-etcd-operator
     - openshift/cluster-image-registry-operator
     - openshift/cluster-ingress-operator
     - openshift/cluster-kube-apiserver-operator
