Add run for minimal set of tests

--- a/ci-operator/jobs/openshift/installer/openshift-installer-master-presubmits.yaml
+++ b/ci-operator/jobs/openshift/installer/openshift-installer-master-presubmits.yaml
@@ -1548,7 +1548,7 @@ presubmits:
         - name: JOB_NAME_SAFE
           value: e2e-metal-ipi
         - name: TEST_COMMAND
-          value: run-remote-tests
+          value: TEST_SUITE=openshift/conformance/parallel run-remote-minimal-tests
         image: ci-operator:latest
         imagePullPolicy: Always
         name: ""
