--- a/ci-operator/config/kubevirt/kubevirt/kubevirt-kubevirt-master.yaml
+++ b/ci-operator/config/kubevirt/kubevirt/kubevirt-kubevirt-master.yaml
@@ -96,9 +96,9 @@ tests:
     echo "checking pods for kubevirt"
     oc get pods -n kubevirt
     echo "testing"
-    mkdir -p "$ARTIFACTS"
+    mkdir -p "$ARTIFACT_DIR"
     TESTS_TO_FOCUS=$(grep -E -o '\[crit\:high\]' tests/*_test.go | sort | uniq | sed -E 's/tests\/([a-z_]+)\_test\.go\:.*/\1/' | tr '\n' '|' | sed 's/|$//')
-    FUNC_TEST_ARGS='--ginkgo.noColor --ginkgo.focus='"$TESTS_TO_FOCUS"' --ginkgo.regexScansFilePath=true --junit-output='"$ARTIFACTS"'/junit.functest.xml' bash -x ./hack/functests.sh
+    FUNC_TEST_ARGS='--ginkgo.noColor --ginkgo.focus='"$TESTS_TO_FOCUS"' --ginkgo.regexScansFilePath=true --junit-output='"$ARTIFACT_DIR"'/junit.functest.xml' bash -x ./hack/functests.sh
 
   openshift_installer_custom_test_image:
     cluster_profile: gcp
