compliance-operator: Add remediations-aggregator image
PR:
    https://github.com/openshift/compliance-operator/pull/113
adds a new component, so we need to build it.

--- a/ci-operator/config/openshift/compliance-operator/openshift-compliance-operator-master.yaml
+++ b/ci-operator/config/openshift/compliance-operator/openshift-compliance-operator-master.yaml
@@ -20,6 +20,9 @@ images:
 - dockerfile_path: images/resultserver/Dockerfile.ci
   from: base
   to: compliance-resultserver
+- dockerfile_path: images/remediation-aggregator/Dockerfile.ci
+  from: base
+  to: compliance-remediation-aggregator
 promotion:
   name: "4.5"
   namespace: ocp
