--- a/ci-operator/config/openshift/compliance-operator/openshift-compliance-operator-release-4.5.yaml
+++ b/ci-operator/config/openshift/compliance-operator/openshift-compliance-operator-release-4.5.yaml
@@ -20,6 +20,9 @@ images:
 - dockerfile_path: images/resultserver/Dockerfile.ci
   from: base
   to: compliance-resultserver
+- dockerfile_path: images/remediation-aggregator/Dockerfile.ci
+  from: base
+  to: compliance-remediation-aggregator
 promotion:
   disabled: true
   name: "4.5"
