Integrate OpenShift CI with openshift-gitops-examples repo.

--- a/core-services/prow/02_config/_config.yaml
+++ b/core-services/prow/02_config/_config.yaml
@@ -1215,6 +1215,7 @@ tide:
     - openshift/hypershift-toolkit
     - openshift/source-to-image
     - openshift/verification-tests
+    - openshift/openshift-gitops-examples
   - labels:
     - lgtm
     - approved
