--- a/core-services/prow/02_config/_plugins.yaml
+++ b/core-services/prow/02_config/_plugins.yaml
@@ -2486,6 +2486,8 @@ plugins:
   - release-note
   openshift/openshift-controller-manager:
   - approve
+  openshift/openshift-gitops-examples:
+  - approve
   openshift/openshift-state-metrics:
   - approve
   openshift/openshift-tests:
