--- a/ci-operator/config/openshift/origin-aggregated-logging/openshift-origin-aggregated-logging-master.yaml
+++ b/ci-operator/config/openshift/origin-aggregated-logging/openshift-origin-aggregated-logging-master.yaml
@@ -14,6 +14,11 @@ base_images:
     name: centos
     namespace: openshift
     tag: "7"
+  nodejs-10:
+    cluster: https://api.ci.openshift.org
+    name: nodejs-10-rhel7
+    namespace: openshift
+    tag: latest
   ruby-25:
     cluster: https://api.ci.openshift.org
     name: release
@@ -39,7 +44,7 @@ images:
   to: logging-elasticsearch6
 - context_dir: kibana/
   dockerfile_path: Dockerfile.centos7
-  from: base_centos
+  from: nodejs-10
   to: logging-kibana6
 - context_dir: curator/
   dockerfile_path: Dockerfile.centos7
