Added missing args to fix rehearsals error

--- a/ci-operator/jobs/openshift/installer/openshift-installer-master-presubmits.yaml
+++ b/ci-operator/jobs/openshift/installer/openshift-installer-master-presubmits.yaml
@@ -1535,6 +1535,8 @@ presubmits:
         - --sentry-dsn-path=/etc/sentry-dsn/ci-operator
         - --target=e2e-metal-ipi
         - --template=/usr/local/e2e-metal-ipi
+        - --image-import-pull-secret=/etc/pull-secret/.dockerconfigjson
+        - --kubeconfig=/etc/apici/kubeconfig
         command:
         - ci-operator
         env:
@@ -1563,6 +1565,12 @@ presubmits:
           subPath: cluster-launch-installer-e2e.yaml
         - mountPath: /etc/sentry-dsn
           name: sentry-dsn
+          readOnly: true
+        - mountPath: /etc/apici
+          name: apici-ci-operator-credentials
+          readOnly: true
+        - mountPath: /etc/pull-secret
+          name: pull-secret
           readOnly: true
       serviceAccountName: ci-operator
       volumes:
