bootstrap complete teardown

--- a/ci-operator/templates/openshift/installer/cluster-launch-installer-upi-e2e.yaml
+++ b/ci-operator/templates/openshift/installer/cluster-launch-installer-upi-e2e.yaml
@@ -1995,9 +1995,8 @@ objects:
           gsutil rb gs://${INFRA_ID}-bootstrap-ignition
           gcloud deployment-manager deployments delete -q ${CLUSTER_NAME}-bootstrap
         elif [[ "${CLUSTER_TYPE}" == "openstack" ]]; then
-          # TODO: destroy bootstrap resources
-          echo "openstack bootstrap resources were not destroyed!"
-          echo "openstack bootstrap complete"
+          # Destroy bootstrap resources
+          ansible-playbook -i inventory-upshift.yaml ./down-03_bootstrap.yaml
         elif [[ "${CLUSTER_TYPE}" == "vsphere" ]]; then
           terraform apply -auto-approve -var 'bootstrap_complete=true' -no-color &
           wait "$!"
