Switch to running minimal tests
the ipi openstack-e2e are configured to run minimal-tests.
lets see if we can run those under upi openstack-e2e

--- a/ci-operator/config/openshift/installer/openshift-installer-master.yaml
+++ b/ci-operator/config/openshift/installer/openshift-installer-master.yaml
@@ -191,7 +191,7 @@ tests:
   openshift_installer_upi:
     cluster_profile: vsphere
 - as: e2e-openstack-upi
-  commands: TEST_SUITE=openshift/conformance/parallel run-tests
+  commands: run-minimal-tests
   openshift_installer_upi:
     cluster_profile: openstack
 - as: e2e-steps
