--- a/ci-operator/jobs/openshift/installer/openshift-installer-master-presubmits.yaml
+++ b/ci-operator/jobs/openshift/installer/openshift-installer-master-presubmits.yaml
@@ -2035,7 +2035,7 @@ presubmits:
         - name: JOB_NAME_SAFE
           value: e2e-openstack-upi
         - name: TEST_COMMAND
-          value: run-minimal-tests
+          value: TEST_SUITE=openshift/conformance/parallel run-tests
         image: ci-operator:latest
         imagePullPolicy: Always
         name: ""
