--- a/ci-operator/jobs/kubevirt/kubevirt/kubevirt-kubevirt-master-presubmits.yaml
+++ b/ci-operator/jobs/kubevirt/kubevirt/kubevirt-kubevirt-master-presubmits.yaml
@@ -14,6 +14,7 @@ presubmits:
     name: pull-ci-kubevirt-kubevirt-master-e2e
     path_alias: kubevirt.io/kubevirt
     rerun_command: /test e2e
+    skip_report: true
     spec:
       containers:
       - args:
