Fix branches for upstream forks like openshift/etcd

--- a/core-services/prow/02_config/_config.yaml
+++ b/core-services/prow/02_config/_config.yaml
@@ -508,6 +508,9 @@ tide:
     - release-4.5
     - release-4.6
     - openshift-4.1
+    - openshift-4.2
+    - openshift-4.3
+    - openshift-4.4
     labels:
     - lgtm
     - approved
@@ -710,6 +713,9 @@ tide:
     - release-4.5
     - release-4.6
     - openshift-4.1
+    - openshift-4.2
+    - openshift-4.3
+    - openshift-4.4
     - feature-es6x
     - feature-prom-connector
     labels:
