--- a/ci-operator/jobs/infra-periodics.yaml
+++ b/ci-operator/jobs/infra-periodics.yaml
@@ -542,6 +542,8 @@ periodics:
       - --ignore-repo=ci-operator/jobs/openshift/oauth-apiserver
       - --ignore-repo=ci-operator/config/openshift/build-machinery-go
       - --ignore-repo=ci-operator/jobs/openshift/build-machinery-go
+      - --ignore-repo=ci-operator/config/openshift/etcd
+      - --ignore-repo=ci-operator/jobs/openshift/etcd
       image: registry.svc.ci.openshift.org/ci/autoowners:latest
       imagePullPolicy: Always
       name: "autoowners"
