Boskos cleaner: Enable debug logging

--- a/core-services/prow/03_deployment/boskos_cleaner.yaml
+++ b/core-services/prow/03_deployment/boskos_cleaner.yaml
@@ -14,7 +14,7 @@ metadata:
     component: boskos-cleaner
   namespace: ci
 spec:
-  replicas: 3
+  replicas: 1
   selector:
     matchLabels:
       component: boskos-cleaner
@@ -34,8 +34,9 @@ spec:
         - --cleaner-count=1
         - --boskos-url=http://boskos
         - --namespace=$(namespace)
+        - --log-level=debug
         env:
-        - name: MY_POD_NAMESPACE
+        - name: namespace
           valueFrom:
             fieldRef:
               fieldPath: metadata.namespace
