--- a/core-services/prow/02_config/_config.yaml
+++ b/core-services/prow/02_config/_config.yaml
@@ -38,6 +38,8 @@ branch-protection:
       repos:
         hyperconverged-cluster-operator:
           protect: false
+        kubevirt:
+          protect: false
     monstorak:
       repos:
         monstorak-operator:
