Added configuration for release-4.4 branch of openshift-kni/performance-addon-operators

--- a/ci-operator/config/openshift-kni/performance-addon-operators/openshift-kni-performance-addon-operators-release-4.4.yaml
+++ b/ci-operator/config/openshift-kni/performance-addon-operators/openshift-kni-performance-addon-operators-release-4.4.yaml
@@ -1,7 +1,7 @@
 base_images:
   operator-registry:
     cluster: https://api.ci.openshift.org
-    name: "4.5"
+    name: "4.4"
     namespace: ocp
     tag: operator-registry
   os:
@@ -35,7 +35,7 @@ promotion:
   excluded_images:
   - operator-registry-base
   - performance-addon-operator-registry
-  name: performance-addon-operator
+  name: performance-addon-operator-4.4
   namespace: openshift-kni
 resources:
   '*':
@@ -45,7 +45,7 @@ resources:
       memory: 200Mi
 tag_specification:
   cluster: https://api.ci.openshift.org
-  name: "4.5"
+  name: "4.4"
   namespace: ocp
 tests:
 - as: ci
