--- a/ci-operator/jobs/openshift/installer/openshift-installer-master-presubmits.yaml
+++ b/ci-operator/jobs/openshift/installer/openshift-installer-master-presubmits.yaml
@@ -1830,7 +1830,7 @@ presubmits:
         - ci-operator
         env:
         - name: CLUSTER_TYPE
-          value: metal
+          value: packet
         - name: CONFIG_SPEC
           valueFrom:
             configMapKeyRef:
