--- a/ci-operator/config/openshift/installer/openshift-installer-master.yaml
+++ b/ci-operator/config/openshift/installer/openshift-installer-master.yaml
@@ -195,7 +195,7 @@ tests:
   openshift_installer_upi:
     cluster_profile: vsphere
 - as: e2e-openstack-upi
-  commands: run-minimal-tests
+  commands: TEST_SUITE=openshift/conformance/parallel run-tests
   openshift_installer_upi:
     cluster_profile: openstack
 - as: e2e-steps
